# YappyBirds-2.0

./: .gitmodules  CMakeLists.txt  README.md  cmake_apple.sh  cmake_icons.sh  main.cpp
macOS_Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
macOS_Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  CreateIcons_cmakeRulesBuildPhase.makeRelWithDebInfo  NJLIGame_preBuildCommands.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  package_postBuildPhase.makeMinSizeRel  really-clean_cmakeRulesBuildPhase.makeDebug
macOS_Xcode/Game.xcodeproj/: project.pbxproj
macOS_Xcode/MyStage/platform/macOS/: Info.plist
macOS_Xcode/NJLIGame.xcodeproj/: project.pbxproj
project.in/shaders/: Makefile
projects/macOS_Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  postprocess_bundle.cmake
projects/macOS_Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  CreateIcons_cmakeRulesBuildPhase.makeDebug  Ldoc_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  YappyBirds_postBuildPhase.makeRelease  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  package_postBuildPhase.makeRelWithDebInfo
projects/macOS_Xcode/MyStage/Release/YappyBirds.app/Contents/: Info.plist
projects/macOS_Xcode/MyStage/Release/YappyBirds.app/Contents/MacOS/: YappyBirds
projects/macOS_Xcode/MyStage/Release/YappyBirds.app/Contents/Resources/: Assets.car
projects/macOS_Xcode/MyStage/Release/YappyBirds.app/Contents/Resources/assets/scripts/NJLI/: DeviceEntity.lua  InterfaceFunctions.lua
projects/macOS_Xcode/MyStage/platform/macOS/: Info.plist
projects/macOS_Xcode/YappyBirds.build/Debug/ALL_BUILD.build/: Script-1C2FCC3911224247B123DD65.sh  dgph
projects/macOS_Xcode/YappyBirds.build/Debug/CreateIcons.build/: Script-8FBF8B65A13E427C8BBFA1E7.sh  dgph
projects/macOS_Xcode/YappyBirds.build/Debug/Ldoc.build/: Script-C248D950F8864F31B7136141.sh  dgph  dgph~
projects/macOS_Xcode/YappyBirds.build/Debug/YappyBirds.build/: dgph
projects/macOS_Xcode/YappyBirds.build/Debug/ZERO_CHECK.build/: dgph
projects/macOS_Xcode/YappyBirds.build/Release/YappyBirds.build/: Script-F858E02BF14643C3B81C83F9.sh  assetcatalog_dependencies  dgph  dgph~
projects/macOS_Xcode/YappyBirds.build/Release/YappyBirds.build/Objects-normal/x86_64/: YappyBirds.LinkFileList  main.d
projects/macOS_Xcode/YappyBirds.build/Release/ZERO_CHECK.build/: Script-E2BA2045391D47DD88E779C5.sh  dgph  dgph~
projects/macOS_Xcode/YappyBirds.xcodeproj/: project.pbxproj
projects/macOS_Xcode/YappyBirds.xcodeproj/project.xcworkspace/xcuserdata/jamesfolk.xcuserdatad/: UserInterfaceState.xcuserstate
projects/macOS_Xcode/YappyBirds.xcodeproj/xcuserdata/jamesfolk.xcuserdatad/xcschemes/: YappyBirds.xcscheme  xcschememanagement.plist
